DevOCL/src/objects/CLQ_Program_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Rating_Estimated_By_System__c</fullName>
        <label>Rating Estimated By System</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Proposed_By_Program__c</fullName>
        <label>Rating Proposed By Program</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Annual_Report_Rating__c</fullName>
        <label>Recommended Annual Report Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Rating__c</fullName>
        <label>Recommended Desk Review Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialist_Notes__c</fullName>
        <label>Specialist Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Notes__c</fullName>
        <label>Supervisor Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Program Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Program__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Submitter__c</columns>
        <columns>CLQ_Submission_Date__c</columns>
        <columns>CLQ_Transaction_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CLQ_Application_Unit_1_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>Application Unit 1</label>
        <queue>CLQ_Application_Unit_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Transactions_All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Program__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Submitter__c</columns>
        <columns>CLQ_Submission_Date__c</columns>
        <columns>CLQ_Transaction_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CLQ_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Transactions - All</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Transactions_Amendment</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>CLQ_Program__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Submitter__c</columns>
        <columns>CLQ_Submission_Date__c</columns>
        <columns>CLQ_Transaction_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CLQ_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program_Transaction__c.CLQ_Amendment_Change_of_Administrator</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program_Transaction__c.CLQ_Amendment_Change_of_Capacity_Space</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program_Transaction__c.CLQ_Amendment_Change_of_Location</value>
        </filters>
        <label>My Transactions - Amendment</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Transactions_Application</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Program__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Submitter__c</columns>
        <columns>CLQ_Submission_Date__c</columns>
        <columns>CLQ_Transaction_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CLQ_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program_Transaction__c.CLQ_Application_CC_Center,CLQ_Program_Transaction__c.CLQ_Application_FCC,CLQ_Program_Transaction__c.CLQ_Application_ODE_Program</value>
        </filters>
        <label>My Transactions - Application</label>
    </listViews>
    <listViews>
        <fullName>CLQ_My_Transactions_Registration</fullName>
        <columns>NAME</columns>
        <columns>CLQ_Program__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CLQ_Submitter__c</columns>
        <columns>CLQ_Submission_Date__c</columns>
        <columns>CLQ_Transaction_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CLQ_Assigned_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CLQ_Program_Transaction__c.CLQ_Registration_Day_Camp,CLQ_Program_Transaction__c.CLQ_Registration_Out_of_State,CLQ_Program_Transaction__c.CLQ_Registration_In_Home_Aide</value>
        </filters>
        <label>My Transactions - Registration</label>
    </listViews>
    <listViews>
        <fullName>Dayton_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>Dayton</label>
        <queue>Dayton</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Desk_Review_Rating_0_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue - Desk Review Rating 0</label>
        <queue>Desk_Review_Rating_0</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JFS_CCC_Akron_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>JFS - CCC - Akron</label>
        <queue>JFS_CCC_Akron</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JFS_CCC_Cleveland_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>JFS - CCC - Cleveland</label>
        <queue>JFS_CCC_Cleveland</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JFS_CCC_Columbus_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>JFS - CCC - Columbus</label>
        <queue>JFS_CCC_Columbus</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JFS_CCC_Dayton_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>JFS_CCC_Dayton</label>
        <queue>JFS_CCC_Dayton</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JFS_CCC_Toledo_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>JFS_CCC_Toledo</label>
        <queue>JFS_CCC_Toledo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JFS_FCC_Akron_CLQ_Program_Transaction</fullName>
        <filterScope>Queue</filterScope>
        <label>JFS - FCC - Akron</label>
        <queue>JFS_FCC_Akron</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Transactions</pluralLabel>
    <recordTypes>
        <fullName>Annual_Report</fullName>
        <active>true</active>
        <description>Use this record type for Annual Reports</description>
        <label>Annual Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Amendment_Change_of_Administrator</fullName>
        <active>true</active>
        <description>Used for Change of Administrator</description>
        <label>Amendment - Change of Administrator</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Amendment_Change_of_Capacity_Space</fullName>
        <active>true</active>
        <description>Used for Change of Capacity or Space</description>
        <label>Amendment - Change of Capacity / Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Amendment_Change_of_Location</fullName>
        <active>true</active>
        <description>Smaller changes to the License that requires re-issuance of License</description>
        <label>Amendment - Center - Change of Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Amendment_FCC_Change_of_Location</fullName>
        <active>true</active>
        <label>Amendment - FCC - Change of Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Amendment_ODE_Change_of_Location</fullName>
        <active>true</active>
        <label>Amendment - ODE - Change of Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Application_CC_Center</fullName>
        <active>true</active>
        <description>Child Care Center (= Type C): &gt; 13 children - Application for any type of License</description>
        <label>Application - CC Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Application_FCC</fullName>
        <active>true</active>
        <description>Use this for new application associated to Family Child Care:  type A/B Homes program</description>
        <label>Application - FCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Application_ODE_Program</fullName>
        <active>true</active>
        <description>Use this for School Age and Pre-School program types</description>
        <label>Application - ODE Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Continuous_License</fullName>
        <active>true</active>
        <label>Continuous License</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Licensing_Closure</fullName>
        <active>true</active>
        <description>Transaction to complete a closure process on a licensed program (ODJFS or ODE) including Day Camps, OOS, IHA.The closure can be of a temporary or permanent type.</description>
        <label>Licensing - Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Reactivate_Transaction</fullName>
        <active>true</active>
        <label>Reactivate Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Registration_Day_Camp</fullName>
        <active>true</active>
        <description>Use this for Non-Licensed Day Camp program types</description>
        <label>Registration - Day Camp</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Registration_In_Home_Aide</fullName>
        <active>true</active>
        <description>Use this for Non-Licensed In-Home Aide program types</description>
        <label>Registration - In-Home Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Registration_Out_of_State</fullName>
        <active>true</active>
        <description>Use this for Non-Licensed Out of State Registration program types</description>
        <label>Registration - Out of State</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_TEST</fullName>
        <active>false</active>
        <description>Test &amp; Deployment Purposes</description>
        <label>CLQ_TEST</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_Contact_Information</fullName>
        <active>true</active>
        <description>Used for Contact updates</description>
        <label>Update Contact Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_Day_Camp</fullName>
        <active>true</active>
        <description>Used for Day Camp updates</description>
        <label>Update Day Camp</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_FCC_Resident_Information</fullName>
        <active>true</active>
        <description>Used for FCC Resident updates</description>
        <label>Update FCC Resident Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_Facility_Information</fullName>
        <active>true</active>
        <description>Used for Facility updates</description>
        <label>Update Facility Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_In_Home_Aid</fullName>
        <active>true</active>
        <description>Used for In-Home Aid updates</description>
        <label>Update In-Home Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_On_site_Contact_Information</fullName>
        <active>true</active>
        <description>Used for On-site Contact changes</description>
        <label>Update On-site Contact Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_Out_of_State</fullName>
        <active>true</active>
        <description>Used for Out of State Transaction</description>
        <label>Update Out of State</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_Outdoor_Space_Information</fullName>
        <active>true</active>
        <description>Used for Outdoor space updates</description>
        <label>Update Outdoor Space Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Update_Space_Information</fullName>
        <active>true</active>
        <description>Used for Space updates</description>
        <label>Update Space Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ongoing_Quality_Rating_Registration</fullName>
        <active>true</active>
        <description>This record type will be used for ongoing quality rating transactions except annual reports</description>
        <label>Ongoing Quality Rating Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_Rating_Registration</fullName>
        <active>true</active>
        <label>Quality Rating Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Out_of_State</fullName>
        <active>true</active>
        <description>Use this for Renewal of Out of State program types</description>
        <label>Renewal - Out of State</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CLQ_Other_Closure_Reason</fullName>
        <active>true</active>
        <description>Other Closure Reason Mandaory if Closure Reason is &apos;Other&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL( CLQ_Closure_Reason__c,&apos;Other&apos;) , ISBLANK( CLQ_Other_Closure_Reason__c ) )</errorConditionFormula>
        <errorDisplayField>CLQ_Other_Closure_Reason__c</errorDisplayField>
        <errorMessage>Please enter Other Closure Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLQ_Other_toxic_substances</fullName>
        <active>true</active>
        <description>Description of other toxic substances should be mandatory if Other Toxic Substances is YES</description>
        <errorConditionFormula>AND( RecordType.Name =&apos;Amendment - FCC - Change of Location&apos;,ISPICKVAL(CLQ_Other_Toxic_Substances__c , &apos;Yes&apos;), ISBLANK( CLQDescription_of_other_toxic_substances__c))</errorConditionFormula>
        <errorDisplayField>CLQDescription_of_other_toxic_substances__c</errorDisplayField>
        <errorMessage>Description of Other Toxic Substances required if Other Toxic Substances is YES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLQ_Radon_Gas_is_Required</fullName>
        <active>true</active>
        <description>Level of Radon Gas is Required if Randon Gas = Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(CLQ_Radon_Gas__c,&apos;Yes&apos;),ISBLANK( CLQ_Level_of_Radon_Gas__c))</errorConditionFormula>
        <errorDisplayField>CLQ_Level_of_Radon_Gas__c</errorDisplayField>
        <errorMessage>Level of Radon Gas is Required if Radon Gas is YES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLQ_Storage_of_Hazardous_Toxic_Material</fullName>
        <active>true</active>
        <description>Storage of Hazardous/Toxic Material – when the value is NO, the field Materials stored in tanks should not be mandatory.</description>
        <errorConditionFormula>AND( RecordType.Name =&apos;Amendment - FCC - Change of Location&apos;,ISPICKVAL( CLQ_Storage_of_Hazardous_Toxic_Material__c , &apos;Yes&apos;), ISBLANK( CLQ_Materials_stored_in_Tanks__c ))</errorConditionFormula>
        <errorDisplayField>CLQ_Materials_stored_in_Tanks__c</errorDisplayField>
        <errorMessage>Materials stored in Tanks is required if Storage of Hazardous Toxic Material is YES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLQ_Temporary_Closure_for_Open_Programs</fullName>
        <active>true</active>
        <description>Temporary closure status is available only for Open programs</description>
        <errorConditionFormula>AND( ISPICKVAL( CLQ_Closure_Type__c , &quot;Temporary&quot;), CLQ_Program_Status__c   &lt;&gt;  &quot;Open&quot;)</errorConditionFormula>
        <errorDisplayField>CLQ_Closure_Type__c</errorDisplayField>
        <errorMessage>Temporary Closure Type can be used only for Open Programs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_rating_proposed_by_Program</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (Rating_Proposed_By_Program__c)</errorConditionFormula>
        <errorMessage>You cannot change the rating proposed by the program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reviewers_cannot_change_PR_ownership</fullName>
        <active>true</active>
        <description>Validation rule to prevent non admins from changing record ownership</description>
        <errorConditionFormula>AND (ISCHANGED( OwnerId ),($Profile.Name = &apos;Standard User JFS&apos;))</errorConditionFormula>
        <errorMessage>You cannot change record ownership</errorMessage>
    </validationRules>
</CustomObject>